Chyba wszystko out

--- a/src/locales/pl/pl.json
+++ b/src/locales/pl/pl.json
@@ -245,5 +245,6 @@
   "yes": "Tak",
   "drivers_history": "Historia kierowców",
   "edit_car": "Edytuj pojazd",
-  "edit_driver": "Edytuj kierowcę"
+  "edit_driver": "Edytuj kierowcę",
+  "save": "Zapisz"
 }
